# scraps

cpp/: .gitignore  CMakeLists.txt  main.cpp
cpp/include/: clahe.hpp
cpp/src/: clahe.cpp  main.cpp
cpp/test/: clahe_test.cpp
hs/: hs.cabal
hs/app/: Main.hs
hs/src/: Sort.hs
rs/: .gitignore  Cargo.toml
rs/src/: main.rs
